Bug 161434 - minimize animation plugin couses non-stop repainting of screen
Summary: minimize animation plugin couses non-stop repainting of screen
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-30 02:26 UTC by Sebastian Kuźlak
Modified: 2008-06-11 17:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kuźlak 2008-04-30 02:26:00 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.2.3 

to reproduce:
- turn on show paint and minimize animation plugins and hit apply.
- minimize a window
and now we can see entire screen repainting. on my athlon 2400xp+ it takes form 20-40% of cpu time.
Comment 1 Martin Flöser 2008-04-30 09:40:24 UTC
Reason is that the method progress() of TimeLine is called to check if the animation is still running. But method value() should be used as the progress is not increased if time is added.
Comment 2 lucas 2008-06-11 17:14:46 UTC
Does this bug still occur? Although the code has not been changed I cannot reproduce it.
Comment 3 Martin Flöser 2008-06-11 17:24:42 UTC
This bug has been fixed by Sebastian Kügler: http://websvn.kde.org/?view=rev&revision=803465

(strange that the bug has not been closed automatically...)