Keep internal time and progress accounting in sync. Spotted by Martin Graesslin.

BUG: 161434
CCMAIL: ubuntu@martin-graesslin.com

svn path=/trunk/KDE/kdebase/workspace/; revision=803465